--- a/7bibliography.tex
+++ b/7bibliography.tex
@@ -54,6 +54,7 @@
 \bibitem{giraph} http://giraph.apache.com, Accessed: September 18th, 2014
 \bibitem{sparkwww} http://spark.apache.com, Accessed: September 18th, 2014
 \bibitem{hadoop} http://hadoop.apache.com, Accessed: September 18th, 2014
+\bibitem{githubspark} https://github.com/apache/spark, Accessed: September 18th, 2014
 \bibitem{giraphfb} https://www.facebook.com/notes/facebook-engineering/scaling-apache-giraph-to-a-trillion-edges/10151617006153920, Accessed: September 18th, 2014
 \bibitem{sparktoplevel} https://blogs.apache.org/foundation/entry/the\_apache\_software\_foundation\_announces50, Accessed: September 18th, 2014
 \bibitem{sparkgrowingcommunity} http://databricks.com/blog/2013/10/27/the-growing-spark-community.html, Accessed: September 18th, 2014
@@ -70,8 +71,7 @@
 
 \bibitem{giraphbook} Claudio Martella, Roman Shaposhnik, Dionysios Logothetis: \textit{Giraph in Action}, Early access edition, http://www.manning.com/martella/
 
+\bibitem{twitterdata} http://snap.stanford.edu/data/egonets-Twitter.html, Accessed: September 18th, 2014 
+
 \end{thebibliography}
-
-\todo{Sprawdzić czy na http://giraph.apache.org/literature.html znajdzie się coś wartego dodania tutaj.}
-
 
