--- a/praca.tex
+++ b/praca.tex
@@ -15,8 +15,10 @@
 \usepackage[section]{placeins}
 \usepackage{fancyvrb}
 \usepackage[usenames,dvipsnames]{xcolor}
+\usepackage{clrscode3e}
 
 \fvset{frame=single,framesep=1mm,fontsize=\scriptsize,numbers=left,framerule=.3mm,numbersep=1mm,commandchars=\\\{\}}
+\definecolor{vdarkgray}{gray}{0.25}
 
 % kindle page geometry (no page numbers)
 %\usepackage[papersize={3.6in,4.8in},hmargin=0.1in,vmargin={0.1in,0.1in}]{geometry}
@@ -147,6 +149,10 @@ This approach makes it is possible to express graph algorithms in a declarative 
 \input{6summary.tex}
 
 \input{7bibliography.tex}
+
+%\appendix
+
+%\input{appendix.tex}
 
 \end{document}
 
