--- a/3socialite.tex
+++ b/3socialite.tex
@@ -1,35 +1,22 @@
 
-\chapter{SociaLite}\label{r:socialite}
+\chapter{SociaLite and Datalog with recursive aggregation}\label{r:socialite}
 
 While Datalog allows to express some of graph algorithms
-in an elegant and succinct way, many practical problems cannot be efficiently solved with Datalog programs. 
+in an elegant and succinct way, many practical problems cannot be efficiently solved with Datalog programs.
 
 SociaLite \cite{socialite, distsoc} is a graph query language based on Datalog.  It allows a programmer to write intuitive queries using declarative semantics, which can often be executed as efficiently as highly optimized dedicated programs. The queries can also be executed in a distributed environment.
 
 Most significant extension over Datalog in SociaLite is the ability to combine recursive rules with aggregation. Under some conditions, such rules can be evaluated incrementally and thus as efficiently as regular recursion in Datalog.
 
-\cite{socialite} introduces \emph{Sequential SociaLite}, intended to be executed on one machine. We cover its most important feature, recursive aggregation, in Section \ref{s:recaggr}.
+\cite{socialite} introduces \emph{Sequential SociaLite}, intended to be executed on one machine. We cover its most important feature, recursive aggregation, in Section \ref{s:recaggr}. It describes the language proposition and possible optimizations, but the language is not precisely defined. The paper only outlines conditions for the programs to be correct, but only in a simplified way and lacks definitions of some notions used, which makes the exact meaning of theorems and proofs unclear.
 
-\cite{distsoc} extends Sequential Socialite to \emph{Distributed SociaLite}, executable on a distributed architecture. It introduces a \emph{location operator}, which determines how the data and computations can be distributed. The programmer does not have to think about how to distribute the data between machines or manage the communication between them. He only specifies an abstract \emph{location} for each fact in the data, and the data and computations are automatically sharded. Distributed SociaLite is covered in section \ref{s:distributed}
+\cite{distsoc} extends Sequential Socialite to \emph{Distributed SociaLite}, executable on a distributed architecture. Distributed SociaLite, described in section \ref{s:distributed}, introduces a \emph{location operator}, which controls how data is distributed between workers and describes an independent implementation of the language. 
 
-
-
-
-%\cite{socialite} introduces \emph{Sequential SociaLite}, intended to be executed on one machine, consisting of two main extensions: \emph{recursive aggregate functions} and \emph{tail-nested tables}. Recursive aggregate functions are the most important feature in Socialite -- in \ref{s:recaggr} we present a complete definition and proofs of correctness of that extension, which are missing in \cite{socialite}. Tail-nested tables are a much more straightforward extension -- an optimization of data layout in memory. They are described in \ref{s:tnt}
-
-
-
-The declarative semantics of Datalog and SociaLite does not specify how the programs should be evaluated. This property enables applying various optimizations in the evaluation. An example of such optimization is shown in Section \ref{s:deltastep}. \todo{To powinno tu zostać tylko jeśli dam radę to zaimplementować w mojej wersji} 
-
-% the \emph{delta stepping} technique, which is an effective way of parallelizing the Dijkstra algorithm \cite{deltastep}. In SociaLite, this technique can be applied automatically to a certain class of recursive aggregate programs. \todo{zostaw sobie TODO i zastanówi się czy to dasz radę zrobić (potrzebny tu komentarz) Być może będzie oddzielny rozdział o optymalizacji i te akapity wylądują tam (że oni robili to i to, a ty to i to, bo bardziej pasowało). Wtedy tu wystarczy wspomnieć że w socialite je mają.}
-
-When distributing computations on large graphs, an approximate result is often enough. Usually we can observe the \emph{long tail} phenomenon in the computation, where a good approximate solution is achieved quickly, but it takes a long time to get to the optimal one or make sure that the current solution cannot be improved. Declarative query language such as SociaLite can be easily extended to return approximate results very fast, in a way that is described in Section \ref{s:approxdist}.
-
-% In SociaLite, by simply stopping the computation, we can obtain an approximate solution found so far. \cite{distsoc} also shows a method which can significantly reduce memory requirements by storing the intermediate results in an approximate way using Bloom filters. Those topics are covered in section \ref{s:approxdist} \todo{to np. nie będzie jasne dopóki nie wiemy więcej}
+In this chapter, we give precise definitions for a Datalog language extended with recursive aggregate functions, which is the main extension over Datalog in SociaLite. We also analyze the conditions for such programs have to satisfy in order to have unambiguous solution.
 
 \section{Datalog with recursive aggregation}\label{s:recaggr}
 
-In this section we introduce the recursive aggregation extension from SociaLite over Datalog. Since SociaLite consists of several extensions to Datalog, not only of recursive aggregation, we will call the language defined here \emph{Datalog with recursive aggregation}, abbreviated \datalogra.
+In this section we introduce the recursive aggregation extension over Datalog. Since SociaLite consists of several extensions to Datalog, not only of recursive aggregation, we will call the language defined here \emph{Datalog with recursive aggregation}, abbreviated \datalogra.
 
 \subsection{Motivation}
 Most graph algorithms are based on some kind of iteration or recursive computation. Examples of such algorithms are the Dijkstra algorithm for single source shortest paths or PageRank. Although simple recursion can be expressed easily in Datalog, it is usually difficult or impossible to express such algorithms in Datalog efficiently, as it would require computing much more intermediate results than actually needed to obtain the solution. We will explain this on an example: a simple program that computes shortest paths from a source node.
@@ -381,7 +368,7 @@ For any \relat{Path}{(x, y, z)}$ \in P'_1$, there are two options: either \relat
 
 %it must be true that \relat{Edge}{(x, y, z)}$ \in E_1$, since there are no rules with \textsc{Edge} in head. Hence, \relat{Edge}{(x, y, z)}$ \in E_2 \supseteq E_1$ and consequently \relat{Edge}{(x, y, z)}$ \in E'_2$, so $E'_1 \subseteq E'_2$.
 
-
+\todo{Finish this proof.}
 
 
 
@@ -451,12 +438,6 @@ $$\textsc{Path}[v](d) :- \textsc{Edge}[1](v, d)$$
 The evaluation is performed on the workers, which are coordinated by a \emph{master node} and send each other the facts they need. Fault tolerance is achieved by checkpointing the state of the computation on distributed file system every few evaluation steps.
 
 In Chapter \ref{r:implementation} we present an alternative way of paralellizing Datalog evaluation --- by translating the program into a set of Apache Spark's native operations on RDDs.
-
-\pomysl{
-Ewentualnie opisać też:
-Delta stepping in Distributed SociaLite %\section{Delta stepping in Distributed SociaLite}\label{s:deltastep}
-Approximate evaluation in Distributed SociaLite %\section{Approximate evaluation in Distributed SociaLite}\label{s:approxdist}
-}
 
 \section{Differences from the original SociaLite}
 
