Poprawki - bez rozw probl niesk rel.

--- a/0introduction.tex
+++ b/0introduction.tex
@@ -34,7 +34,7 @@ The thesis consists of six chapters. In Chapter~\ref{r:datalog} we recall defini
 
 We start by giving some basic definitions which will be used in this paper.
 
-The languages considered in the paper operate on databases, which consist facts over relations identified by relation names, for example \relat{R}{}, \relat{P}{}, \relat{Tc}{}, \relat{Path}{} or \relat{Edge}{}.
+The languages considered in the paper operate on databases, which consist of facts over relations identified by relation names, for example \relat{R}{}, \relat{P}{}, \relat{Tc}{}, \relat{Path}{} or \relat{Edge}{}.
 
 The relations contain facts, which are tuples of values from a countable infinite set $\textbf{dom}$ called the \emph{domain}. The programs that we will consider use variables from a set $\bf{var}$, which is disjoint from $\bf{dom}$. 
 
